# Low-Poly-Adventure

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD
include/glad/: glad.h
resources/maps/: map1.json
resources/models/: ceiling.json  container.json  coral_cube.json  floor.json  wall.json  white_cube.json
resources/models/level_1/: level_1.blend  level_1.blend1  level_1.gltf
resources/models/mall/: mall.blend  mall.blend1  mall.glb  mall.gltf
resources/models/player/: player.blend  player.blend1  player.gltf
resources/shaders/: fShader.glsl  fShaderLight.glsl  vShader.glsl
src/: glad.c  main.cpp
src/engine/: debug_cube.cpp  debug_cube.h  map.cpp  map.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  player.cpp  player.h  position_struct.h  primitive.cpp  primitive.h  shader.cpp  shader.h  texture.h  utils.cpp  utils.h  vertex.h
src/engine/game/: GameInstance.cpp  GameInstance.h
src/engine/intersection/: AABB.cpp  AABB.h  IntersectionResult.h  IntersectionUtil.cpp  IntersectionUtil.h  Projection.cpp  Projection.h  intersection_util.cpp  intersection_util.h  projection.cpp  projection.h
src/engine/map/: Map.cpp  Map.h  map.h
src/engine/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelUtil.cpp  ModelUtil.h  Node.cpp  Node.h  PositionStruct.h  Primitive.cpp  Primitive.h  Texture.h  TransformationStruct.h  Vertex.h  model.cpp  model.h  node.cpp  node.h  primitive.cpp  primitive.h
src/engine/player/: Player.cpp  Player.h  player.cpp  player.h
src/engine/util/: GLMLogger.cpp  GLMLogger.h
src/helpers/: camera.cpp  camera.h  map.cpp  map.h  mesh.cpp  mesh.h  model.cpp  model.h  node.h  primitive.h  shader.cpp  shader.h  texture.cpp  texture.h  tri_tri_intersect.h  vertex.h
src/shader/: Shader.cpp  Shader.h  shader.cpp  shader.h
